# reportUI-app

./: LICENSE  README.md  app.py  pyproject.toml
design/: RidersSchoolReportUi.ui
utils/: get_data_from_ui.py
