[tool.poetry]
name = "riders_bike_report_app"
version = "0.1.0"
description = ""
authors = ["jjuchara <jjuchara@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
PyQt5 = "^5.15.7"
PyQt5-stubs = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
